high school subject
I changed it into the classesI followedat high school

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                   <h5>2018</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Audiovisual media specialization</li>
+                    <li>Math, History, Dutch, English, Economy, Business organization and society sciences.</li>
                   </ul>
                 </div>
               </li>
