--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Formula 1 Driver</li>
               <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Photography&nbsp;</li>
             </ul>
           </section>
 
