--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
               <li class="skill-item">Formula 1 Driver</li>
               <li class="skill-item">Netflix Binge-Watcher</li>
               <li class="skill-item">Photography&nbsp;</li>
+              <li class="skill-item">Videography&nbsp;</li>
             </ul>
           </section>
 
