--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, City High School</h4>
                   <h5>2018</h5>
+                  <h4>High School Diploma, Amadeus Lyceum High School</h4>
                   <ul class="biography-details list-unstyled">
                     <li>Math, History, Dutch, English, Economy, Business organization and society sciences.</li>
                   </ul>
