--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Social media manager, Panino di Pino</h4>
+                  <h5>June 2021&ndash;now</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Creating Tiktoks</li>
+                    <li>Making instagram posts and stores</li>
+                    <li>makes professional pictures for website&nbsp;</li>
                   </ul>
                 </div>
               </li>
