--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait.svg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/profilepictre.jpg" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -197,7 +197,7 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="tel:+31612345678" target="_blank">
                   <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
-                +31 6 37336340 </a>
+                +31 6 37336350 </a>
               </li>
             </ul>
           </section>
@@ -232,14 +232,7 @@
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
                 </div>
               </li>
-              <li class="language-item d-flex mb-1">
-           
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
-                </div>
-              </li>
+              <li class="language-item d-flex mb-1"> </li>
             </ul>
           </section>
 
