--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
                     <li>Creating Tiktoks</li>
-                    <li>Making instagram posts and stores</li>
-                    <li>makes professional pictures for website&nbsp;</li>
+                    <li>Making instagram posts and stories</li>
+                    <li>Makes professional pictures for website&nbsp;</li>
                   </ul>
                 </div>
               </li>
