--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Anne-Sophie Mulders</h1>
-          <h5 class="fst-italic tagline">The best content creator you have ever had.</h5>
+          <h5 class="fst-italic tagline">Content creator&nbsp;&nbsp;</h5>
         </div>
       </header>
 
