--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <ul class="biography-details list-unstyled">
                     <li>Audivisual department</li>
                     <li>Winner of the 'best film' award 2021&nbsp; &nbsp;</li>
-                    <li>Exchange with Ryerson University Toronto</li>
+                    <li>Kindertrendrede commercial&nbsp; &nbsp;&nbsp;&nbsp;</li>
                   </ul>
                 </div>
               </li>
